--- a/groupme-stuff.cabal
+++ b/groupme-stuff.cabal
@@ -26,7 +26,8 @@ executable groupme-stuff
                 HTTP >=4000.3.3,
                 http-conduit >=2.1.0,
                 basic-prelude >=0.5.2,
-                random >=1.1
+                random >=1.1,
+                process >= 1.4.3.0
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:
